# recommended_network

./: .gitignore  anime_info.ipynb  info.ipynb  music_info.ipynb  pyproject.toml  recomendations.py  requirements.txt  source.py  utils.py
app/: __init__.py  recomendations.py  source.py  views.py
app/static/: images_links.csv
app/templates/: base.html  empty.html  home.html  index.html  recomendations.html
