[tool.poetry]
name = "recommended-network"
version = "0.1.0"
description = ""
authors = ["Dankoveshnikov <dan-acer@outlook.com>"]
readme = "README.md"
packages = [{include = "recommended_network"}]

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.24.2"
seaborn = "^0.12.2"
pandas = "^2.0.0"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
sklearn = "^0.0.post5"
scikit-learn = "^1.2.2"
flask = "^2.3.2"
flask-restful = "^0.3.10"
waitress = "^2.1.2"
flask-wtf = "^1.1.1"
flask-bootstrap = "^3.3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
